...
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:background="@color/colorPrimary"
    >

    <TextView
        android:id="@+id/budgetName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="budgetName"
        android:textAlignment="center"
        android:textSize="25sp"
...
            android:text="balance"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/budgetBalance"
            android:layout_weight=".3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="100$"
            android:textAlignment="center"
...
